<resources>
    <string name="app_name">Browser2</string>
    <string name="action_search">Search</string>
    <string name="action_forward">Forward</string>
    <string name="label_search">Enter a Website</string>
    <string name="action_home">Home</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="settings_sethome">Set Page as Home</string>
    <string name="settings_setbookmark">Set Page as Bookmark</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_history">History</string>


</resources>
