<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<!-- "Mark Favorite", should appear as action button if possible -->


<item
    android:id="@+id/action_search"
    android:icon="@drawable/ic_search_black_24dp"
    android:title="@string/action_search"
    app:showAsAction="ifRoom"/>

<!-- Settings, should always be in the overflow -->
<item android:id="@+id/action_forward"
    android:icon="@drawable/ic_forward_black_24dp"
    android:title="@string/action_forward"
    app:showAsAction="ifRoom"/>

<item android:id="@+id/action_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/action_home"
    app:showAsAction="ifRoom"/>

<item android:id="@+id/action_refresh"
    android:icon="@drawable/ic_refresh_black_24dp"
    android:title="@string/action_refresh"
    app:showAsAction="ifRoom"/>

<item android:id="@+id/action_settings"
    android:icon="@drawable/ic_refresh_black_24dp"
    android:title="@string/action_settings"
    app:showAsAction="never">

    <menu>

        <item android:id="@+id/settings_sethome"
            android:title="@string/settings_sethome"/>

        <item android:id="@+id/settings_setbookmark"
            android:title="@string/settings_setbookmark" />

    </menu>

</item>

<item android:id="@+id/action_bookmarks"
    android:icon="@drawable/ic_bookmark_border_black_24dp"
    android:title="@string/action_bookmarks"
    app:showAsAction="never">

</item>

<!--<item android:id="@+id/action_history"-->
    <!--android:icon="@drawable/ic_refresh_black_24dp"-->
    <!--android:title="@string/action_history"-->
    <!--app:showAsAction="never">-->

<!--</item>-->



</menu>